original images addded

--- a/animations.html
+++ b/animations.html
@@ -40,7 +40,10 @@
         <p>Final animation: GIF, 1080 x 1080px, 968 KB</p>
         <p>Presented at 600 x 600px</p>
         <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/animations/kintsugi-animation.psd">Download PSD
-            file</a>
+            file</a><br />
+          <a
+            href="https://www.istockphoto.com/photo/antique-broken-japanese-raku-black-bowl-repaired-with-gold-kintsugi-technique-gm1280370315-378700358">Link
+            to original image</a>
         </p>
 
         <div class="image-summary">
@@ -85,6 +88,8 @@
         <p>Presented at 600 x 600px</p>
         <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/animations/candle-animation.psd">Download PSD
             file</a>
+          <a href="https://unsplash.com/photos/HdVIGmYhUsA">Link
+            to original image</a>
         </p>
         <div class="image-summary">
           <p>Inspired by 'cinemagraphs' shared on our course, I was interested in making a smoother gif. This animation
