--- a/images.html
+++ b/images.html
@@ -55,7 +55,7 @@
         </div>
 
 
-        <p>Final images: PNG, 5-95 KB</p>
+        <p>Final images: PNG | 5-95 KB</p>
 
         <p><a href="https://www.shutterstock.com/image-photo/clay-vase-isolated-on-white-background-1532061593">Link
             to source template image</a></p>
@@ -75,7 +75,8 @@
             duplicated each half and used transform > reflect to mirror the object vertically at 90
             degrees. I merged the two sides of each vase, creating a single shape, using the shape builder tool. I
             coloured the vases and outlines using the palette I had chosen for the brand, and here they are also
-            presented at a variety of sizes. To maintain the background transparency, each was logo exported as a PNG
+            presented at a variety of sizes. To maintain the background transparency, each was logo exported as a
+            portable network graphic (PNG)
             file – PNG-8
             was sufficient as these are flat, single-colour images.</p>
 
@@ -115,7 +116,7 @@
           <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/logos/dkc-logo-rectangle-pink.svg" width="300px"
             height="111px" />
         </div>
-        <p>Final images: SVG, 500 x 184px, 9 KB</p>
+        <p>Final images: SVG | 500 x 184px | 9 KB</p>
 
 
         <div class="logos round">
@@ -142,7 +143,7 @@
           <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/logos/dkc-logo-round-orange-gradient.svg" width="180px"
             height="180px" />
         </div>
-        <p>Final images: SVG, 500 x 500px, 5 KB</p>
+        <p>Final images: SVG | 500 x 500px | 5 KB</p>
 
 
         <div class="image-summary">
@@ -210,7 +211,7 @@
           <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/hero-teapot-template.jpg" width="1440px"
             height="768px" />
         </div>
-        <p>Final image: JPG, 1440x768px, 90KB</p>
+        <p>Final image: JPG | 1440x768px | 90KB</p>
 
         <p>
           <a href="https://www.pexels.com/photo/black-teapot-with-water-6474374/">Link to original image</a><br />
@@ -265,12 +266,12 @@
 
           <div class="product-image"><img
               src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/cup-saucer-branches-original.jpg" height="600px" />
-            <p>Original image: JPG, 640 x 960px, 124 KB</p>
+            <p>Original image: JPG | 640 x 960px | 124 KB</p>
           </div>
 
           <div class="product-image"><img
               src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/cup-saucer-branches.jpg" height="600px" />
-            <p>Final image: JPG, 614 x 960px, 101 KB</p>
+            <p>Final image: JPG | 614 x 960px | 101 KB</p>
           </div>
 
         </div>
@@ -281,12 +282,12 @@
         <div class="product-images">
           <div class="product-image"><img
               src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/dark-grey-cups-original.jpg" width="400px" />
-            <p>Original image: JPG, 3024 x 4032px, 1.9 MB</p>
+            <p>Original image: JPG | 3024 x 4032px | 1.9 MB</p>
           </div>
 
           <div class="product-image"><img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/dark-grey-cups.jpg"
               width="400px" />
-            <p>Final image: JPG, 662 x 800px, 88 KB</p>
+            <p>Final image: JPG | 662 x 800px | 88 KB</p>
           </div>
 
         </div>
@@ -327,7 +328,7 @@
         <p>Created with Adobe Photoshop</p>
 
         <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/promotional-banner-grey-pots.jpg" />
-        <p>Final image: JPG, 1280 x 520px, 127.7 KB</p>
+        <p>Final image: JPG | 1280 x 520px | 127.7 KB</p>
         <p>
           <a href="https://dkc2021.s3.eu-west-2.amazonaws.com/images/promotional-banner.psd">Download PSD file –
             promotional banner</a><br />
@@ -376,8 +377,14 @@
         <h2>Welcome back</h2>
         <p>Created with Adobe Photoshop</p>
         <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.jpg" />
-        <p>Final image: JPG, 800 x 534px, 96 KB</p>
-        <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.psd">Download PSD file</a></p>
+        <p>Final image: JPG | 800 x 534px | 96 KB</p>
+        <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.psd">Download PSD file</a><br />
+          <a href="https://unsplash.com/photos/7M-KCs7mH3Y">Link to original image – table</a><br />
+          <a href="https://images.unsplash.com/photo-1543785520-f52fecf4ecfa">Link to original image –
+            floorboards</a><br />
+          <a href="https://www.pexels.com/photo/beverage-breakfast-cafe-caffeine-374147/">Link to original image –
+            coffee</a>
+        </p>
         <div class="image-summary">
           <p>I wanted to make an inviting composite image comprising various elements I had worked on. This image is
             for
