--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
             <h3>Images</h3>
             <div class="image-card">
               <div class="card-image">
-                <a href="./images.html"><img
-                    src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/cup-saucer-branches-600x400.jpg" alt=""
-                    width="600px" height="400px" />
+                <a href="./images.html"><img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.jpg"
+                    alt="" width="600px" height="400px" />
                   <div class="overlay">Images</div>
                 </a>
               </div>
@@ -56,9 +55,7 @@
             <h3>Mockups</h3>
             <div class="image-card">
               <a href="./mockups.html">
-                <img
-                  src="https://media.istockphoto.com/photos/antique-broken-japanese-raku-black-bowl-repaired-with-gold-kintsugi-picture-id1280370315?k=6&m=1280370315&s=170667a&w=0&h=vtGhKM0qsDamqY0WxDqq2xGtpN7TEP6aBy1oJ8uo7rE="
-                  alt="A picture of X" />
+                <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/cup-saucer-branches-600x400.jpg" alt="" />
                 <div class="overlay">Mockups</div>
               </a>
             </div>
