--- a/mockups.html
+++ b/mockups.html
@@ -70,6 +70,8 @@
             aligned
             well with the modular, component-based build in React.
           </p>
+          <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/dulwich-kiln-ceramics-mockups.xd">Download
+              Adobe XD file</a></p>
         </div>
 
 
