--- a/animations.html
+++ b/animations.html
@@ -34,7 +34,6 @@
         <h2>Kintsugi</h2>
         <p>Created in Adobe Photoshop</p>
 
-
         <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/animations/kintsugi-animation.gif" width="600px"
           height="600px" />
         <p>Final animation: GIF, 1080 x 1080px, 968 KB</p>
@@ -47,31 +46,33 @@
         </p>
 
         <div class="image-summary">
-          <p>I sourced the image of a kintsugi bowl from a stock photography website and reduced the width to 1080px. I
-            used content-aware scale to extend the height to 1080px. I then duplicated the layer. I selected each
+          <p>I designed an animation to advertise a workshop. I sourced the image of a kintsugi bowl from a
+            stock photography website and reduced the width to 1080px. I
+            used 'Content-Aware Scale' to extend the height to 1080px. I then
+            duplicated the layer. I selected each
             fragment
             of the bowl in turn using the
             quick select tool, outputting
             each
             to a new layer. I zoomed in to make the selection pixel-by-pixel to achieve the finish I wanted, and used
             the
-            'smart radius' and 'decontaminate colors' functions, while contracting the edges by 2% in the select and
+            'smart radius' and 'decontaminate colors' features as well as contracting the edges by 2% in the select and
             mask properties. I was left with the base
             of the bowl, and used the spot healing brush tool on replace mode to
-            recreate the background where parts of the bowl had been cut. I added a layers for the advert heading,
+            recreate the background where parts of the bowl had been cut. I added layers for the advert heading,
             summary
-            and logo. I created a kintsugi layer using part of the bowl and layered this on top of the text to create a
-            clipping mask – giving the text its kintsugi effect for the final frame.
+            and logo. I created a 'kintsugi pattern' image from the bowl image separately and layered this on top of the
+            text to
+            create a
+            clipping mask – giving the text its kintsugi effect for the final frame.</p>
 
-            I opened the timeline to create a frame animation and added a fragment, positioned using transform rotate,
+          <p> I opened the timeline to create a frame animation and added a fragment, positioned using transform rotate,
             to
             each frame, so that they accumulate – the seventh frame is the bowl in its original form. The text, logo and
             kintsugi text effect are added over the course of the final frames. I set each to 0.5 seconds and the
             animation to loop once.
 
-
-          </p>
-          <p>I exported the image as a gif using 'Save for Web'. I reduced the colour paletter from 256 to 128 – I
+            I exported the image as a gif using 'Save for Web'. I reduced the colour paletter from 256 to 128 – I
             wanted
             to reduce the file size, but felt the gold's lustre was diminsihed with fewer colours than this.</p>
         </div>
@@ -81,13 +82,12 @@
         <h2>Candle</h2>
         <p>Created in Adobe Photoshop</p>
 
-
         <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/animations/candle-animation.gif" width="600px"
           height="600px" />
         <p>Final animation: GIF, 800 x 800px, 6 MB</p>
         <p>Presented at 600 x 600px</p>
         <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/animations/candle-animation.psd">Download PSD
-            file</a>
+            file</a><br />
           <a href="https://unsplash.com/photos/HdVIGmYhUsA">Link
             to original image</a>
         </p>
@@ -96,11 +96,11 @@
             was
             conceived as an Instagram
             advert for the festive season and
-            made by animating a still image, with the help of a tutorial.</p>
-
-          <p>I found an image of a ceramic/glass candle on a stock photography website. I was drawn to the warmth of
-            the image. The image was resized and then cropped to 1080 x 1080px. I added a logo as a layer to the
-            candle holder, coloured to match. I then added a text box for the headline and offer text in the brand
+            made by animating a still image, with the help of a <a
+              href="https://www.youtube.com/watch?v=cQoeTbBHwuM">tutorial</a>. I found an image of a ceramic/glass
+            candle on a stock photography website. I was drawn to the warmth of
+            the image. The image was resized and then cropped to 1080 x 1080px. I placed the logo as a layer on the
+            candle holder, coloured to match it. I then added a text box for the headline and offer text in the brand
             fonts, using the eyedropper tool to pick a text colour to match the candle's flame.</p>
           <p>I used the quick selection tool to select most of the flame element and saved this to a new layer, with a
             feather of one pixel to soften the edges. I used the paint brush tool, increasing the hardness to 50% and
