--- a/images.html
+++ b/images.html
@@ -251,7 +251,8 @@
             with
             a plain block of colour at 90% opacity – this meets the gradient where it ends to the left
             of
-            the image, giving a seamless finish. I cropped the image to its final width of 1440px. I used Export >
+            the image, giving a seamless finish.</p>
+          <p>I cropped the image to its final width of 1440px. I used Export >
             Save
             for Web to save the image as a JPG at 'very high' quality. This reduced the file size from 'maximum' but
             retained the quality, which was important owing to the size and prominance of the image on the website.</p>
@@ -378,7 +379,10 @@
         <p>Created with Adobe Photoshop</p>
         <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.jpg" />
         <p>Final image: JPG | 800 x 534px | 96 KB</p>
+
         <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.psd">Download PSD file</a><br />
+          <a href="https://dkc2021.s3.eu-west-2.amazonaws.com/images/white-plates.jpg">Download original image – white
+            plates</a><br />
           <a href="https://unsplash.com/photos/7M-KCs7mH3Y">Link to original image – table</a><br />
           <a href="https://images.unsplash.com/photo-1543785520-f52fecf4ecfa">Link to original image –
             floorboards</a><br />
