--- a/index.html
+++ b/index.html
@@ -24,30 +24,28 @@
         </ul>
       </div>
     </div>
+  </nav>
+  <div class="content-wrapper">
+    <main>
+      <h1>Visual design project</h1>
+      <h2>Dulwich Kiln Ceramics</h2>
+      <p class="intro-text">
+        My project is an example representation of a brand and website for a friend who produces and sells handmade
+        tableware in
+        south east
+        London. I imagined this enterprise on a grander scale when
+        developing its brand, assets and website.
+      </p>
 
-    <div class="content-wrapper">
-      <main>
-        <h1>Visual design project</h1>
-        <h2>Dulwich Kiln Ceramics</h2>
-        <p class="intro-text">
-          My project is an example representation of a brand and website for a friend who produces and sells handmade
-          tableware in
-          south east
-          London. I imagined this enterprise on a grander scale when
-          developing its brand and assets.
-        </p>
-
-
-        <section class="cards">
-          <div class="card">
-            <h3>Images</h3>
-            <div class="image-card">
-              <div class="card-image">
-                <a href="./images.html"><img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.jpg"
-                    alt="" width="600px" height="400px" />
-                  <div class="overlay">Images</div>
-                </a>
-              </div>
+      <section class="cards">
+        <div class="card">
+          <h3>Images</h3>
+          <div class="image-card">
+            <div class="card-image">
+              <a href="./images.html"><img src="https://dkc2021.s3.eu-west-2.amazonaws.com/images/welcome-back.jpg"
+                  alt="" width="600px" height="400px" />
+                <div class="overlay">Images</div>
+              </a>
             </div>
           </div>
 
@@ -69,19 +67,21 @@
                 <div class="overlay">Animations</div>
               </a>
             </div>
-        </section>
-        <p>Please note: this website was designed to present my visual design portfolio on desktop and is not
-          responsive.</p>
-      </main>
+          </div>
+        </div>
+      </section>
+      <p>Please note: this website was designed to present my visual design portfolio on desktop and is not
+        responsive.</p>
+    </main>
 
+  </div>
+
+  <footer>
+    <div class="content-wrapper">
+
+      <p class="small-print">&#169; Katherine Fife 2021</p>
     </div>
-
-    <footer>
-      <div class="content-wrapper">
-
-        <p class="small-print">&#169; Katherine Fife 2021</p>
-      </div>
-    </footer>
+  </footer>
 </body>
 
 </html>
