--- a/mockups.html
+++ b/mockups.html
@@ -31,7 +31,7 @@
     <main>
       <section>
         <h1>Mockups</h1>
-        <h2>Fonts, colour palette and icons</h2>
+        <h2>Fonts, colours and icons</h2>
         <div class="image-summary">
           <p>I wanted the website to compliment the products and to reflect their simplicity, and thought about ways to
             achieve this visually. I felt a consistent user interface with breathing space around the different elements
@@ -40,41 +40,48 @@
           <p>I looked at a variety of font pairings, settling on Lora and Roboto in combination. I opted for a
             serif and sans-serif pairing in an attempt to echo the timeless quality of the products, but also their
             relative minimalism. Lora is used for
-            headings, with Roboto at different weights for the navigation, body text and calls to action. While taken
-            with more decorative fonts, the site is designed to be functional and legibility is important.</p>
+            headings and hero text, with Roboto at different weights for the navigation, body text and calls to action.
+            I experimented with more decorative serif fonts, but prioritised the legibility of headings.
+            Navigation links and calls-to-action are in uppercase to give them a particular emphasis.
+          </p>
 
           <p>The icons are sourced from FlatIcon. They aren’t entirely consistent in style – the burger icon lines for
             example, have a rounded cap, for example, and this was rectified when building the project.</p>
 
           <p>I experimented with the Adobe colour wheel before finding a theme I thought would work well. The contrast
-            ratio of all combinations used have been checked for AA compliance using the TPGi Colour Contrast Analyser.
-            The darker blue is used for hover and selected states.</p>
+            ratio of all combinations used has been checked for AA compliance using the TPGi Colour Contrast Analyser.
+            The lighter blue is used for buttons, with the darker blue taking effect for hover and selected states.</p>
         </div>
         <div><img src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/typography.png" width="1280px" /></div>
-        <h2>Artboards, components and layout</h2>
+        <h2>Components and layout</h2>
         <div class="image-summary">
           <p>
-            The mockups were created with Adobe XD. I used a 1920x1080px artboard for desktop, but all content except
-            the hero image sits within a width of 1280px to ensure it is comfortably placed within a 1366px browser. The
-            viewport height is set 768px. The mobile artboards use the iPhone X template because I wanted to meet the
-            challenge of a slimmer phone
-            first.</p>
-
-
-          <p>I used a twelve-column layout, with a 40px gutter to help me create the space desired between elements. I
+            The mockups were created with Adobe XD. I used a 1920 x 1080px artboard for the desktop designs, but all
+            content except
+            the hero image sits within a width of 1280px to ensure it is comfortably placed within a 1366px browser
+            window. The
+            viewport height is set 768px. I used a twelve-column layout, with a 40px gutter to help me create the space
+            desired between elements. I
             also used the Adobe XD square layout to support consistent spacing with a square size of eight – in general,
             component heights, margin
             sizes and font sizes are multiples of eight.
             I
             created my own UI kit of reusable components, including cards, buttons, forms and a header and footer. This
             aligned
-            well with the modular, component-based build in React.
-          </p>
+            well with the modular, component-based build in React.</p>
+          <p>
+
+            The mobile artboards use the iPhone X template because I wanted to meet the
+            challenge of a slimmer phone
+            first. The row layout of cards converts to column for mobile and heading sizes are decreased. The paragraph
+            font size remains at 16px regardless of browser size for an accessible reading experience.</p>
+
           <p><a href="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/dulwich-kiln-ceramics-mockups.xd">Download
               Adobe XD file</a></p>
         </div>
 
-
+      </section>
+      <section>
         <h3>Homepage – desktop | 1920px (1280px)</h3>
         <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/homepage-desktop.png" width="1000px" />
         <h3>Shop – desktop | 1920px (1280px)</h3>
@@ -83,39 +90,39 @@
         <h3>Product page – desktop | 1920px (1280px)</h3>
         <img src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/product-page-desktop.png" width="1000px" />
 
+        <div class="mockups">
+
+          <div>
+            <h3>Studio page – desktop | 1920px (1280px)</h3><img
+              src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/studio-desktop.png" width="580px" />
+          </div>
+          <div>
+            <h3>My account page – desktop | 1920px (1280px)</h3><img
+              src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/account-desktop.png" width="580px" />
+          </div>
+
+        </div>
+
+        <div class="mockups">
+
+          <div>
+            <h3>Homepage – mobile | 375px</h3><img
+              src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/homepage-iphone.png" width="320px" />
+          </div>
+          <div>
+            <h3>Shop – mobile | 375px</h3><img src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/shop-iphone.png"
+              width="320px" />
+          </div>
+          <div>
+            <h3>Product page – mobile | 375px</h3><img
+              src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/product-page-iphone.png" width="320px" />
+          </div>
+
+        </div>
+
+      </section>
+    </main>
   </div>
-
-  <div class="mockups">
-
-    <div>
-      <h3>Studio page – desktop | 1920px (1280px)</h3><img
-        src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/studio-desktop.png" width="580px" />
-    </div>
-    <div>
-      <h3>My account page – desktop | 1920px (1280px)</h3><img
-        src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/account-desktop.png" width="580px" />
-    </div>
-
-  </div>
-
-  <div class="mockups">
-
-    <div>
-      <h3>Homepage – mobile | 375px</h3><img
-        src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/homepage-iphone.png" width="320px" />
-    </div>
-    <div>
-      <h3>Shop – mobile | 375px</h3><img src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/shop-iphone.png"
-        width="320px" />
-    </div>
-    <div>
-      <h3>Product page – mobile | 375px</h3><img
-        src="https://dkc2021.s3.eu-west-2.amazonaws.com/mockups/product-page-iphone.png" width="320px" />
-    </div>
-
-  </div>
-  </section>
-  </main>
 
 </body>
 
